# ckdn

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  SECURITY.md  ckdn.lock.toml  ckdn.toml  codeclone.baseline.json  pyproject.toml  zensical.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
docs/: agents-mcp.md  aliases.md  baselines.md  cli.md  configuration.md  design.md  digests.md  get-started.md  index.md  parsers.md  status-model.md
examples/claude/: CLAUDE.md
examples/claude/skills/verified-fix-loop/: SKILL.md
src/ckdn/: __init__.py  __main__.py  _win32.py  annotate.py  baseline.py  cli.py  command_policy.py  config.py  config_lock.py  digest.py  preflight.py  reconcile.py  runner.py  schema.py
src/ckdn/app/: __init__.py  errors.py  queries.py  run.py  types.py
src/ckdn/mcp/: __init__.py  context.py  guidance.py  register.py  server.py
src/ckdn/mcp/tools/: __init__.py  get_digest.py  get_evidence.py  list_checks.py  list_runs.py  run_check.py  run_group.py
src/ckdn/parsers/: __init__.py  bandit_json.py  base.py  coverage_xml.py  generic.py  mypy.py  pip_audit_json.py  pre_commit_text.py  pylint_json.py  pyright_json.py  pytest_junit.py  reformat_text.py  ruff_json.py  sarif.py  ty_text.py
src/ckdn/schemas/: __init__.py  ckdn.aggregate.v1.schema.json  ckdn.digest.v2.schema.json  ckdn.meta.v1.schema.json
tests/: digest_factory.py  test_annotate.py  test_app.py  test_baseline.py  test_cli.py  test_cli_alias.py  test_command_policy.py  test_config.py  test_determinism.py  test_digest.py  test_mcp.py  test_mcp_guidance.py  test_parser_plugins.py  test_parsers.py  test_preflight.py  test_reconcile.py  test_runner.py  test_schema.py  worktree_fixtures.py
